## Copyright (C) 2019 Xueyi Yao
## 
## This file is part of VPixels.
## 
## VPixels is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
## 
## VPixels is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with VPixels.  If not, see <https://www.gnu.org/licenses/>.

## Makefile.am for test/gif/

## for CMake build
EXTRA_DIST = CMakeLists.txt

## Source of GifEncoderDecoderTest
GifEncoderDecoderTest_SOURCES = GifCodeWriterTest.h GifCodeWriterTest.cpp \
                                GifCodeReaderTest.h GifCodeReaderTest.cpp \
                                GifStringTableTest.h GifStringTableTest.cpp \
                                GifEncoderTest.h GifEncoderTest.cpp \
                                GifDecoderTest.h GifDecoderTest.cpp \
                                GifEncoderDecoderTest.h GifEncoderDecoderTest.cpp \
                                @top_srcdir@/test/UnitTestMain.cpp

## Source of GifComponentsTest
GifComponentsTest_SOURCES = GifHeaderTest.h GifHeaderTest.cpp \
                            GifBlockIOTest.h GifBlockIOTest.cpp \
                            GifScreenDescriptorTest.h GifScreenDescriptorTest.cpp \
                            GifColorTableTest.h GifColorTableTest.cpp \
                            GifGraphicsControlExtTest.h GifGraphicsControlExtTest.cpp \
                            GifImageDataTest.h GifImageDataTest.cpp \
                            GifImageDescriptorTest.h GifImageDescriptorTest.cpp \
                            GifApplicationExtTest.h GifApplicationExtTest.cpp \
                            GifCommentExtTest.h GifCommentExtTest.cpp \
                            GifComponentTest.h GifComponentTest.cpp \
                            GifComponentVecUtilTest.h GifComponentVecUtilTest.cpp \
                            GifImageVecBuilderTest.h GifImageVecBuilderTest.cpp \
                            GifImageTest.h GifImageTest.cpp \
                            GifImplTest.h GifImplTest.cpp \
                            GifTest.h GifTest.cpp \
                            @top_srcdir@/test/UnitTestMain.cpp

## Source of ListGifComponents
ListGifComponents_SOURCES = ListGifComponents.cpp

## Dependencies of target check_PROGRAMS
## i.e. executables to be built when running 'make check'
check_PROGRAMS = GifComponentsTest GifEncoderDecoderTest

## Dependencies of target check-TESTS
## i.e. executables to be invoked when running 'make check'
TESTS = GifComponentsTest GifEncoderDecoderTest

## non-install executables
noinst_PROGRAMS = ListGifComponents

## includes, flags and libs
AM_CXXFLAGS = -I@top_srcdir@/src/gif -I@top_srcdir@/include/vp $(CPPUNIT_CFLAGS)
AM_LDFLAGS = @top_builddir@/src/gif/libvpgif.a
LIBS = $(CPPUNIT_LIBS)

## all-local is a target of both 'make' and 'make check'
all-local: pre-test-setup

## setting up before running tests
pre-test-setup:
	@echo > empty.gif
	@echo GIF89a > header_only.gif
	@echo GIF87a > export_exist.gif
	@$(RM) export_new.gif

clean-tmp-files:
	@$(RM) *.gif

## if code coverage check is enabled (using configure --enable-gcov)
if CHECK_COVERAGE

## check-local, together with check-TESTS (i.e. unit tests), is a target
## of check-am. however, coverage check is supposed to be done after the
## running of unit tests, so make check-coverage a dependency of check-TESTS
## (see definition of check-coverage), just in case that make is run in
## parallel (e.g. make check -j2)
check-local: check-coverage

## check coverage of code in src/gif and  current directory (test/gif)
## *.gcda files are accumulative and need to be removed after each run
check-coverage: check-TESTS
	@echo Checking code coverage...
	@echo ========== libvpgif ===========
	@gcov -rl @top_builddir@/src/gif/*.o
	@echo ===============================
	@$(RM) @top_builddir@/src/gif/*.gcda
	@echo
	@echo ======= libvpgif tests ========
	@gcov -rl $(GifEncoderDecoderTest_OBJECTS)
	@gcov -rl $(GifComponentsTest_OBJECTS)
	@echo ===============================
	@$(RM) *.gcda

## clean up files related to coverage check
## *.gcno is generated when source file is compiled
## *.gcda is generated after executing and is accumulative
## *.gcov is generated by gcov
clean-coverage-files:
	$(RM) *.gcno *.gcov *.gcda

## clean-local is a target of 'make clean'
clean-local: clean-tmp-files clean-coverage-files

else   # CHECK_COVERAGE

clean-local: clean-tmp-files

endif  # CHECK_COVERAGE

## User defined targets
.PHONY: check-coverage pre-test-setup clean-tmp-files clean-coverage-files
