## Copyright (C) 2019 Xueyi Yao
## 
## This file is part of VPixels.
## 
## VPixels is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
## 
## VPixels is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with VPixels.  If not, see <https://www.gnu.org/licenses/>.

## Makefile.am for directory test/util/

## for CMake build
EXTRA_DIST = CMakeLists.txt

## Source of UtilTest
UtilTest_SOURCES = IOutilTest.h IOutilTest.cpp \
                   SimpleListTest.h SimpleListTest.cpp \
                   @top_srcdir@/test/UnitTestMain.cpp
                   
## Dependencies of target check_PROGRAMS
## i.e. executables to be built when running 'make check'
check_PROGRAMS = UtilTest

## Dependencies of target check-TESTS
## i.e. executables to be invoked when running 'make check'
TESTS = UtilTest

## includes, flags and libs
AM_CXXFLAGS = -I@top_srcdir@/src/util $(CPPUNIT_CFLAGS)
LIBS = $(CPPUNIT_LIBS)

## if code coverage check is enabled (using configure --enable-gcov)
if CHECK_COVERAGE

## check-local, together with check-TESTS (i.e. unit tests), is a target
## of check-am. however, coverage check is supposed to be done after the
## running of unit tests, so make check-coverage a dependency of check-TESTS
## (see definition of check-coverage), just in case that make is run in
## parallel (e.g. make check -j2)
check-local: check-coverage

## check coverage of code in src/util and test/util
## *.gcda files are accumulative and need to be removed after each run
check-coverage: check-TESTS
	@echo Checking code coverage...
	@echo ========= util tests ==========
	@gcov -rl $(UtilTest_OBJECTS)
	@echo ===============================
	@$(RM) *.gcda

## clean up files related to coverage check
## *.gcno is generated when source file is compiled
## *.gcda is generated after executing and is accumulative
## *.gcov is generated by gcov
clean-coverage-files:
	@$(RM) *.gcno *.gcov *.gcda

## clean-local is a target of 'make clean'
clean-local: clean-coverage-files

## User defined targets
.PHONY: check-coverage clean-coverage-files

endif  # CHECK_COVERAGE
